<resources>
    <string name="app_name">Еліт Експресс</string>

    <string name="checkInternet">Перевірте інтернет з\'єднання та перезавантажте додаток</string>
    <string name="ok">ОК</string>
    <string name="connectionError">Помилка з\'єднання</string>
    <string name="toRegister">Авторизація</string>
    <string name="toHistory">Історія</string>
    <string name="toInfo">Інформація</string>

    <string name="hintEditName">Прізвище, Ім\'я</string>
    <string name="hintEditPhone">Мобільний телефон\n0123456789</string>
    <string name="buttonSave">Зберегти</string>
    <string name="reservation">Бронювання місць</string>
    <string name="history">Історія поїздок</string>
    <string name="voyage">Рейс</string>
    <string name="dateInput">Дата поїздки</string>
    <string name="placeCountInp">Кількість місць</string>
    <string name="departure">Відправлення</string>
    <string name="arrival">Прибуття</string>
    <string name="departureTime">Час відправлення</string>
    <string name="promo">Промокод</string>
    <string name="comment">Коментарі</string>
    <string name="buttonCancel">Скасувати</string>
    <string name="loading">З\'єднання</string>
    <string name="places">місця</string>
    <string name="buttonPay">сплатити онлайн</string>
    <string name="reserveButton">Забронювати</string>
    <string name="checkInputData">Перевірте введені дані</string>
    <string name="checkTel">Перевірте введений номер телефону</string>
    <string name="confirm">Підтвердити</string>
    <string name="close">Закрити</string>
    <string name="price">Вартість квитків</string>
    <string name="choose">Вибрати</string>
    <string name="finishedTrips">Завершені поїздки</string>
    <string name="reservedTrips">Заброньовані поїздки</string>
    <string name="emptyTrips">Поїздки відсутні</string>
    <string name="info">При виникненні будь яких питань звертайтесь за номерами\n050 3281 777\n067 4477 089</string>
    <string name="paidTrips">Оплачені поїздки</string>
    <string name="checkCancel">Ви дійсно бажаєте відмінити бронювання?</string>
    <string name="checkCancelBody">Якщо поїздка оплачена для повернення коштів звертайтесь за номерами\n050 3281 777\n067 4477 089</string>
    <string name="smsCode">Введіть код з смс-повідомлення</string>
    <string name="registrationError">Помилка реєстрації</string>
    <string name="errorCode">Невірний код</string>
    <string name="timeLeft">Ви зможете повторити операцію через</string>
    <string name="update">Оновлення</string>
    <string name="updateMessage">Для продовження оновіть додаток</string>
    <string name="toUpdate">Оновити</string>

</resources>
